--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
+include: [".gitignore"]
 title: Robert Spencer
 email: rob@robspencer.me.uk
 description: > # this means to ignore newlines until "baseurl:"
