--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-include: [".gitignore"]
+exclude: ["node_modules"]
 title: Robert Spencer
 email: rob@robspencer.me.uk
 description: > # this means to ignore newlines until "baseurl:"
