--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-build-control": "^0.7.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-jekyll": "^0.4.4"
+  },
+  "dependencies": {
+    "bootstrap-sass": "^3.3.6"
   }
 }
