--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,7 @@
 title: Robert Spencer
 email: rob@robspencer.me.uk
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  My name is Robert Spencer. I am a HCI researcher, currently with a focus on networking.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.robspencer.me.uk" # the base hostname & protocol for your site
 twitter_username: rjspencer1989
@@ -47,9 +45,3 @@ defaults:
       type: "pages"
     values:
       layout: "page"
-  -
-    scope:
-      path: ""
-      type: "posts"
-    values:
-      layout: "post"
