--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-jekyll": "^0.4.4"
   },
   "dependencies": {
-    "bootstrap-sass": "^3.3.6"
+    "bootstrap-sass": "^3.3.6",
+    "jquery": "^2.2.4"
   }
 }
