--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.robspencer.me.uk" # the base hostname & protocol for your site
 twitter_username: rjspencer1989
 github_username:  rjspencer1989
+linkedin_username: robert-spencer-6b096511b
 
 # Build settings
 exclude: ["node_modules", "package.json", "Gruntfile.js"]
