contact details and home page

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "grunt": "^1.0.1",
     "grunt-build-control": "^0.7.0",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-git": "^1.0.0",
     "grunt-jekyll": "^0.4.4"
   },
   "dependencies": {
