--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Robert Spencer
 email: rob@robspencer.me.uk
 description: > # this means to ignore newlines until "baseurl:"
-  My name is Robert Spencer. I am a HCI researcher, currently with a focus on networking.
+  My name is Robert Spencer. I am a Software Developer.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.robspencer.me.uk" # the base hostname & protocol for your site
 twitter_username: rjspencer1989
@@ -18,29 +18,12 @@ linkedin_username: robert-spencer-6b096511b
 
 # Build settings
 exclude: ["package.json", "Gruntfile.js"]
-plugins: ['jekyll/scholar']
+plugins: []
 markdown: kramdown
 sass:
   load_paths:
     - _sass
     - node_modules
-scholar:
-  style: apa
-  locale: en
-  source: ./_bibliography
-  bibliography: references.bib
-  bibliography_template: bib
-  use_raw_bibtex_entry: false
-  sort_by: year,month
-  bibtex_filters:
-  - superscript
-  - latex
-
-  details_dir:    bibliography
-  details_layout: bibtex.html
-  details_link:   Details
-
-  query: "@*"
 
 defaults:
   -
