--- a/website/package.json
+++ b/website/package.json
@@ -9,7 +9,10 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "bootstrap": "^4.4.1",
+    "react-router-bootstrap": "^0.25.0",
+    "react-bootstrap": "^1.0.0-beta.17"
   },
   "scripts": {
     "start": "react-scripts start",
